--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="name">Name</string>
     <string name="add_image">Add Image</string>
     <string name="select_user">Select User</string>
+    <string name="online">Online</string>
 </resources>
